--- a/Reborn/View/Base.lproj/LaunchScreen.storyboard
+++ b/Reborn/View/Base.lproj/LaunchScreen.storyboard
@@ -1,10 +1,11 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="18122" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" launchScreen="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="01J-lp-oVM">
+    <device id="retina4_0" orientation="portrait" appearance="light"/>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17703"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="18093"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
+        <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
@@ -13,39 +14,63 @@
             <objects>
                 <viewController id="01J-lp-oVM" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Ze5-6b-2t3">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="重生" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMY-G1-WgY">
-                                <rect key="frame" x="178.5" y="404" width="57" height="34"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="开启自律生活" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3a-lw-6aZ">
-                                <rect key="frame" x="158" y="448" width="98" height="20"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <button opaque="NO" contentMode="scaleToFill" misplaced="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dlO-SR-m6m">
-                                <rect key="frame" x="157" y="296" width="100" height="100"/>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" translatesAutoresizingMaskIntoConstraints="NO" id="VCX-Jk-Hv8">
+                                <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
+                                <subviews>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PVr-nf-xuY" userLabel="Top View">
+                                        <rect key="frame" x="0.0" y="0.0" width="320" height="284"/>
+                                        <subviews>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="重生" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wMY-G1-WgY">
+                                                <rect key="frame" x="131.5" y="202" width="57" height="33.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="开启自律生活" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="T3a-lw-6aZ">
+                                                <rect key="frame" x="111" y="245.5" width="98" height="19.5"/>
+                                                <fontDescription key="fontDescription" type="system" pointSize="16"/>
+                                                <nil key="textColor"/>
+                                                <nil key="highlightedColor"/>
+                                            </label>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="dlO-SR-m6m">
+                                                <rect key="frame" x="110" y="92" width="100" height="100"/>
+                                                <constraints>
+                                                    <constraint firstAttribute="width" constant="100" id="QIe-OW-ByG"/>
+                                                    <constraint firstAttribute="height" constant="100" id="tlW-aV-Qqr"/>
+                                                </constraints>
+                                                <state key="normal" backgroundImage="AppIconWithShadow-Blue"/>
+                                            </button>
+                                        </subviews>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                        <constraints>
+                                            <constraint firstItem="wMY-G1-WgY" firstAttribute="top" secondItem="dlO-SR-m6m" secondAttribute="bottom" constant="10" id="FEi-Cf-byu"/>
+                                            <constraint firstItem="dlO-SR-m6m" firstAttribute="centerX" secondItem="PVr-nf-xuY" secondAttribute="centerX" id="Mvb-86-2gb"/>
+                                            <constraint firstItem="dlO-SR-m6m" firstAttribute="centerY" secondItem="PVr-nf-xuY" secondAttribute="centerY" id="bVi-Ng-cXy"/>
+                                            <constraint firstItem="T3a-lw-6aZ" firstAttribute="centerX" secondItem="PVr-nf-xuY" secondAttribute="centerX" id="gZy-CC-980"/>
+                                            <constraint firstItem="wMY-G1-WgY" firstAttribute="centerX" secondItem="PVr-nf-xuY" secondAttribute="centerX" id="ui8-Re-ZPC"/>
+                                            <constraint firstItem="T3a-lw-6aZ" firstAttribute="top" secondItem="wMY-G1-WgY" secondAttribute="bottom" constant="10" id="yjx-nr-m6E"/>
+                                        </constraints>
+                                    </view>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="EYp-zO-iY7" userLabel="Bottom View">
+                                        <rect key="frame" x="0.0" y="284" width="320" height="284"/>
+                                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                    </view>
+                                </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="100" id="QIe-OW-ByG"/>
-                                    <constraint firstAttribute="height" constant="100" id="tlW-aV-Qqr"/>
+                                    <constraint firstItem="EYp-zO-iY7" firstAttribute="height" secondItem="PVr-nf-xuY" secondAttribute="height" id="spH-lJ-T98"/>
                                 </constraints>
-                                <state key="normal" backgroundImage="AppIconWithShadow-Blue"/>
-                            </button>
+                            </stackView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                         <color key="backgroundColor" name="WhiteAndBlackBackground"/>
                         <constraints>
-                            <constraint firstItem="dlO-SR-m6m" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="Bqm-hd-L2X"/>
-                            <constraint firstItem="T3a-lw-6aZ" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="gwd-z0-Qou"/>
-                            <constraint firstItem="wMY-G1-WgY" firstAttribute="top" secondItem="dlO-SR-m6m" secondAttribute="bottom" constant="10" id="hCd-7s-J87"/>
-                            <constraint firstItem="wMY-G1-WgY" firstAttribute="centerX" secondItem="Ze5-6b-2t3" secondAttribute="centerX" id="oR1-Sb-V3q"/>
-                            <constraint firstItem="T3a-lw-6aZ" firstAttribute="top" secondItem="wMY-G1-WgY" secondAttribute="bottom" constant="10" id="tgZ-Gu-jq8"/>
-                            <constraint firstItem="dlO-SR-m6m" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="250" id="tnt-jr-xhi"/>
+                            <constraint firstItem="VCX-Jk-Hv8" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" id="0Yh-w0-Pks"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="VCX-Jk-Hv8" secondAttribute="trailing" id="DSN-AG-7kB"/>
+                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="bottom" secondItem="VCX-Jk-Hv8" secondAttribute="bottom" id="aJz-ob-Gak"/>
+                            <constraint firstItem="VCX-Jk-Hv8" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" id="sK3-LI-3j4"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -59,5 +84,8 @@
         <namedColor name="WhiteAndBlackBackground">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
     </resources>
 </document>
